k8s/apps/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/bespinian/insanely-complex-todo/frontend:latest
          readinessProbe:
            initialDelaySeconds: 1
            periodSeconds: 10
            httpGet:
              port: 80
              path: /
          livenessProbe:
            initialDelaySeconds: 1
            periodSeconds: 10
            httpGet:
              port: 80
              path: /
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
              name: web
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: web
      name: web
  selector:
    app: frontend
  type: ClusterIP
