k8s/apps/websocket-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: websocket-server
  template:
    metadata:
      labels:
        app: websocket-server
    spec:
      containers:
        - name: websocket-server
          image: ghcr.io/bespinian/insanely-complex-todo/websocket-server:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-server
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8765
  selector:
    app: websocket-server
  type: ClusterIP
